--- a/UpdateFlymeStyle/app/src/main/res/layout/main.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/main.xml
@@ -14,9 +14,8 @@
 			android:layout_height="38dp"
 			android:layout_width="match_parent"
 			android:orientation="horizontal"
-			android:background="#DA726B"
+			android:background="@drawable/bg_header"
 			android:gravity="center"
-			android:elevation="4dp"
 			android:paddingLeft="4dp"
 			android:paddingRight="4dp"
 			android:id="@+id/title_app">
