--- a/UpdateFlymeStyle/app/src/main/res/values/styles.xml
+++ b/UpdateFlymeStyle/app/src/main/res/values/styles.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="@android:style/Theme.Material.Light">
+    <style name="AppTheme" parent="@android:style/Theme.Material.Light"/>
+	<style name="JudulApp">
+		<item name="android:textSize">14.0dip</item>
+		<item name="android:textColor">@color/app_accent</item>
+		<item name="android:singleLine">true</item>
+		<item name="android:textStyle">normal</item>
+		<item name="android:typeface">serif</item>
+		<item name="android:fontFamily">sans-serif</item>
+		<item name="android:shadowDx">2.0</item>
+		<item name="android:shadowDy">2.0</item>
+		<item name="android:shadowRadius">3.0</item>
+		<item name="android:shadowColor">#75000000</item>
 	</style>
 </resources>
