--- a/UpdateFlymeStyle/app/src/main/res/layout/main.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/main.xml
@@ -34,13 +34,16 @@
 			android:orientation="vertical"
 			android:layout_marginTop="46dp"
 			android:id="@+id/deskripsi_app"
-			android:padding="4dp"
+			android:padding="6dp"
 			android:background="@drawable/bg_header">
 
 			<TextView
+				android:textAppearance="@style/JudulApp"
 				android:layout_height="wrap_content"
 				android:layout_width="wrap_content"
-				android:text="@string/deskripsi_app"/>
+				android:text="@string/deskripsi_app"
+				android:textAlignment="center"
+				android:layout_gravity="center|fill_horizontal"/>
 
 		</LinearLayout>
 
