--- a/UpdateFlymeStyle/app/src/main/res/menu/flyme_menu.xml
+++ b/UpdateFlymeStyle/app/src/main/res/menu/flyme_menu.xml
@@ -3,5 +3,9 @@
     <item
         android:id="@+id/kumpulan_flyme_00"
         android:title="@string/title_page_00"/>
+	
+	<item
+        android:id="@+id/exit_app"
+        android:title="Keluar"/>
     
 </menu>
