--- a/UpdateFlymeStyle/app/src/main/res/menu/flyme_menu.xml
+++ b/UpdateFlymeStyle/app/src/main/res/menu/flyme_menu.xml
@@ -10,6 +10,22 @@
         android:title="@string/title_page_01"/>
 	
 	<item
+        android:id="@+id/kumpulan_flyme_02"
+        android:title="@string/title_page_02"/>
+	
+	<item
+        android:id="@+id/kumpulan_flyme_03"
+        android:title="@string/title_page_03"/>
+	
+	<item
+        android:id="@+id/kumpulan_flyme_04"
+        android:title="@string/title_page_04"/>
+	
+	<item
+        android:id="@+id/kumpulan_flyme_05"
+        android:title="@string/title_page_05"/>
+	
+	<item
         android:id="@+id/exit_app"
         android:title="Keluar"/>
     
