--- a/UpdateFlymeStyle/app/src/main/res/layout/main.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/main.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="center">
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:layout_gravity="center"
+	android:gravity="center"
+	android:layout_marginLeft="16dp"
+	android:layout_marginRight="16dp"
+	android:paddingTop="10dp"
+	android:paddingBottom="12dp"
+	android:paddingLeft="8dp"
+	android:paddingRight="8dp">
 
 	<FrameLayout
 		android:layout_height="match_parent"
-		android:layout_width="match_parent"
-		android:layout_margin="16dp">
+		android:layout_width="match_parent">
 
 		<LinearLayout
 			android:layout_height="38dp"
@@ -18,7 +24,11 @@
 			android:gravity="center"
 			android:paddingLeft="4dp"
 			android:paddingRight="4dp"
-			android:id="@+id/title_app">
+			android:id="@+id/title_app"
+			android:layout_marginTop="16dp"
+			android:layout_marginLeft="8dp"
+			android:layout_marginRight="8dp"
+			android:layout_marginBottom="8dp">
 
 			<TextView
 				android:textAppearance="@style/JudulApp"
@@ -32,10 +42,12 @@
 			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
 			android:orientation="vertical"
-			android:layout_marginTop="46dp"
+			android:layout_marginTop="65dp"
 			android:id="@+id/deskripsi_app"
-			android:padding="6dp"
-			android:background="@drawable/bg_header">
+			android:padding="10dp"
+			android:background="@drawable/bg_header"
+			android:layout_marginLeft="8dp"
+			android:layout_marginRight="8dp">
 
 			<TextView
 				android:textAppearance="@style/JudulApp"
