--- a/UpdateFlymeStyle/app/src/main/res/layout/main.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/main.xml
@@ -55,9 +55,15 @@
 				android:layout_width="wrap_content"
 				android:text="@string/deskripsi_app"
 				android:textAlignment="center"
-				android:layout_gravity="center|fill_horizontal"/>
+				android:layout_gravity="center|fill_horizontal"
+				android:textSize="12sp"/>
 
 		</LinearLayout>
+
+		<ProgressBar
+			android:layout_height="38dp"
+			android:layout_width="38dp"
+			android:id="@+id/progress"/>
 
 	</FrameLayout>
 
