Lanjutan yang tadi

--- a/UpdateFlymeStyle/app/src/main/res/layout/main.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/main.xml
@@ -2,17 +2,17 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
+	android:layout_height="fill_parent"
 	android:layout_gravity="center"
 	android:gravity="center"
-	android:layout_marginLeft="16dp"
-	android:layout_marginRight="16dp"
 	android:paddingTop="10dp"
 	android:paddingBottom="12dp"
 	android:paddingLeft="8dp"
-	android:paddingRight="8dp">
+	android:paddingRight="8dp"
+	android:background="@color/background_app_01">
 
 	<FrameLayout
+		android:background="@null"
 		android:layout_height="match_parent"
 		android:layout_width="match_parent">
 
@@ -31,6 +31,7 @@
 			android:layout_marginBottom="8dp">
 
 			<TextView
+				android:background="@null"
 				android:textAppearance="@style/JudulApp"
 				android:layout_height="wrap_content"
 				android:layout_width="wrap_content"
@@ -50,6 +51,7 @@
 			android:layout_marginRight="8dp">
 
 			<TextView
+				android:background="@null"
 				android:textAppearance="@style/JudulApp"
 				android:layout_height="wrap_content"
 				android:layout_width="wrap_content"
@@ -59,11 +61,6 @@
 				android:textSize="12sp"/>
 
 		</LinearLayout>
-
-		<ProgressBar
-			android:layout_height="38dp"
-			android:layout_width="38dp"
-			android:id="@+id/progress"/>
 
 	</FrameLayout>
 
