--- a/UpdateFlymeStyle/app/src/main/res/values/colors.xml
+++ b/UpdateFlymeStyle/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
 	<color name="app_accent">#fff1f1f1</color>
 	<color name="accent_app">#FF009E</color>
 	<color name="action_bar_color">@color/accent_app</color>
-	<color name="background_app_00">#ff000000</color>
+	<color name="background_app_00">#0DBAEF</color>
+	<color name="background_app_01">#f1f1f1</color>
 </resources>
