--- a/UpdateFlymeStyle/app/src/main/res/drawable/bg_header.xml
+++ b/UpdateFlymeStyle/app/src/main/res/drawable/bg_header.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 	<item>
 		<shape>
-			<solid android:color="#EE417B"/>
+			<solid android:color="@color/accent_app"/>
 			<corners android:radius="7.0dip"/>
 		</shape>
 	</item>
