--- a/UpdateFlymeStyle/app/src/main/res/layout/cara_install.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/cara_install.xml
@@ -4,7 +4,18 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
-	android:background="#C8392F">
+	android:background="@color/background_app_00">
+
+	<TextView
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:text="Cara Install"
+		android:gravity="center_horizontal"
+		android:layout_marginTop="16dp"
+		android:textSize="16sp"
+		android:textColor="#FFFFFF"
+		android:textStyle="bold"
+		android:typeface="serif"/>
 
 </LinearLayout>
 
