--- a/UpdateFlymeStyle/app/src/main/res/values/colors.xml
+++ b/UpdateFlymeStyle/app/src/main/res/values/colors.xml
@@ -3,7 +3,12 @@
 	<color name="app_theme">#EE417B</color>
 	<color name="app_accent">#fff1f1f1</color>
 	<color name="accent_app">#FF009E</color>
+	<!-- 29-Agustus-2020 -->
 	<color name="action_bar_color">@color/accent_app</color>
 	<color name="background_app_00">#0DBAEF</color>
 	<color name="background_app_01">#f1f1f1</color>
+	<color name="text_title_color_00">#222222</color>
+	
+	
+	
 </resources>
