--- a/UpdateFlymeStyle/app/src/main/res/values/styles.xml
+++ b/UpdateFlymeStyle/app/src/main/res/values/styles.xml
@@ -12,4 +12,13 @@
 		<item name="android:shadowRadius">3.0</item>
 		<item name="android:shadowColor">#75000000</item>
 	</style>
+	<!-- 29-Agustus-2020 -->
+	<style name="TextTitleFlyme">
+		<item name="android:textSize">16.0dip</item>
+		<item name="android:textStyle">bold</item>
+		<item name="android:typeface">serif</item>
+		<item name="android:textColor">@color/text_title_color_00</item>
+		
+	</style>
+	
 </resources>
