--- a/UpdateFlymeStyle/app/src/main/res/layout/flyme_01.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/flyme_01.xml
@@ -2,40 +2,234 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <FrameLayout android:layout_width="fill_parent" android:layout_height="36.0dip">
-        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
-            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
-                <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
-                    <TextView android:textSize="12.0sp" android:typeface="serif" android:textColor="#ff4dab97" android:layout_gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Selasa" android:singleLine="true" />
-                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_view" android:tint="#ffff9500" />
-                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_notification" android:tint="#ff00edff" />
+    <FrameLayout 
+		android:layout_width="fill_parent" 
+		android:layout_height="36.0dip">
+        <LinearLayout 
+			android:orientation="horizontal" 
+			android:layout_width="fill_parent" 
+			android:layout_height="fill_parent">
+            <LinearLayout 
+				android:orientation="vertical" 
+				android:layout_width="0.0dip" 
+				android:layout_height="fill_parent" 
+				android:layout_weight="1.0">
+                <LinearLayout
+					android:gravity="center|left" 
+					android:orientation="horizontal"
+					android:paddingLeft="10.0dip" 
+					android:paddingRight="2.0dip" 
+					android:layout_width="fill_parent" 
+					android:layout_height="0.0dip"
+					android:layout_weight="0.5">
+					
+					<!-- Isi dengan Kontent statusbar kamu -->
+                    <TextView 
+						android:textSize="12.0sp" 
+						android:typeface="serif" 
+						android:textColor="#ff4dab97"
+						android:layout_gravity="center|left" 
+						android:layout_width="wrap_content" 
+						android:layout_height="wrap_content" 
+						android:text="Selasa" 
+						android:singleLine="true" />
+					
+                    <ImageView
+						android:paddingLeft="2.0dip" 
+						android:layout_width="18.0dip"
+						android:layout_height="18.0dip"
+						android:src="@drawable/ic_view" 
+						android:tint="#ffff9500" />
+					
+                    <ImageView 
+						android:paddingLeft="2.0dip" 
+						android:layout_width="18.0dip" 
+						android:layout_height="wrap_content"
+						android:src="@drawable/ic_notification" 
+						android:tint="#ff00edff" />
+					
                 </LinearLayout>
-                <ImageView android:background="#ffe3b10c" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="8.0dip" />
-                <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
-                    <TextView android:textSize="12.0sp" android:typeface="serif" android:textColor="#ff41df95" android:layout_gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="458MB" android:singleLine="true" />
-                    <TextView android:textSize="12.0sp" android:typeface="serif" android:textColor="#ffffce00" android:layout_gravity="center|left" android:paddingLeft="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/1407MB" android:singleLine="true" />
+				
+				<!-- Garis Flyme -->
+                <ImageView 
+					android:background="#ffe3b10c" 
+					android:layout_width="fill_parent"
+					android:layout_height="1.0dip" 
+					android:layout_marginLeft="8.0dip" />
+				
+                <LinearLayout
+					android:gravity="center|left" 
+					android:orientation="horizontal" 
+					android:paddingLeft="10.0dip" 
+					android:paddingRight="2.0dip"
+					android:layout_width="fill_parent" 
+					android:layout_height="0.0dip" 
+					android:layout_weight="0.5">
+					
+					<!-- Isi dengan Kontent statusbar kamu -->
+                    <TextView 
+						android:textSize="12.0sp"
+						android:typeface="serif" 
+						android:textColor="#ff41df95"
+						android:layout_gravity="center|left" 
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content" 
+						android:text="458MB" 
+						android:singleLine="true" />
+					
+                    <TextView 
+						android:textSize="12.0sp" 
+						android:typeface="serif" 
+						android:textColor="#ffffce00" 
+						android:layout_gravity="center|left"
+						android:paddingLeft="2.0dip"
+						android:layout_width="wrap_content" 
+						android:layout_height="wrap_content"
+						android:text="/1407MB" 
+						android:singleLine="true" />
+					
                 </LinearLayout>
+				
             </LinearLayout>
-            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
-                <TextClock android:textColor="#ff16c925" android:layout_width="wrap_content" android:layout_height="wrap_content" android:format12Hour="hh:mm:ss" android:format24Hour="hh:mm:ss" />
+			
+            <LinearLayout 
+				android:gravity="center"
+				android:layout_gravity="center" 
+				android:orientation="vertical"
+				android:layout_width="0.0dip" 
+				android:layout_height="fill_parent" 
+				android:layout_weight="1.0">
+				
+				<!-- Komfigurasikan lagi sesuai selera -->
+                <TextClock 
+					android:textColor="#ff16c925" 
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content" 
+					android:format12Hour="hh:mm:ss" 
+					android:format24Hour="hh:mm:ss" />
+				
             </LinearLayout>
-            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
-                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:paddingLeft="2.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
-                    <TextView android:textSize="12.0sp" android:typeface="serif" android:textColor="#ffbbb600" android:layout_gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="45*F" android:singleLine="true" />
-                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_cloud" android:tint="#ffff9500" />
-                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_battery" android:tint="#ff00edff" />
+			
+            <LinearLayout 
+				android:orientation="vertical" 
+				android:layout_width="0.0dip" 
+				android:layout_height="fill_parent" 
+				android:layout_weight="1.0">
+				
+                <LinearLayout 
+					android:gravity="center|right" 
+					android:orientation="horizontal" 
+					android:paddingLeft="2.0dip" 
+					android:paddingRight="10.0dip"
+					android:layout_width="fill_parent" 
+					android:layout_height="0.0dip" 
+					android:layout_weight="0.5">
+					
+					<!-- Isi dengan Kontent statusbar kamu -->
+                    <TextView 
+						android:textSize="12.0sp"
+						android:typeface="serif" 
+						android:textColor="#ffbbb600"
+						android:layout_gravity="center|left" 
+						android:layout_width="wrap_content" 
+						android:layout_height="wrap_content" 
+						android:text="45*F" 
+						android:singleLine="true" />
+					
+                    <ImageView
+						android:paddingLeft="2.0dip" 
+						android:layout_width="18.0dip" 
+						android:layout_height="18.0dip" 
+						android:src="@drawable/ic_cloud" 
+						android:tint="#ffff9500" />
+					
+                    <ImageView 
+						android:paddingLeft="2.0dip" 
+						android:layout_width="18.0dip" 
+						android:layout_height="wrap_content"
+						android:src="@drawable/ic_battery" 
+						android:tint="#ff00edff" />
+					
                 </LinearLayout>
-                <ImageView android:background="#ffe3b10c" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginRight="8.0dip" />
-                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:paddingLeft="2.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
-                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_sinyal" android:tint="#ff00edff" />
-                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_sinyal" android:tint="#ff00edff" />
-                    <TextView android:typeface="monospace" android:textStyle="italic" android:textColor="#ffa3ff40" android:layout_gravity="center|right" android:paddingLeft="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="january" android:singleLine="true" />
+				
+				<!-- Garis Flyme -->
+                <ImageView
+					android:background="#ffe3b10c" 
+					android:layout_width="fill_parent"
+					android:layout_height="1.0dip" 
+					android:layout_marginRight="8.0dip" />
+				
+                <LinearLayout 
+					android:gravity="center|right" 
+					android:orientation="horizontal" 
+					android:paddingLeft="2.0dip" 
+					android:paddingRight="10.0dip" 
+					android:layout_width="fill_parent" 
+					android:layout_height="0.0dip"
+					android:layout_weight="0.5">
+					
+					<!-- Isi dengan Kontent statusbar kamu -->
+                    <ImageView
+						android:paddingLeft="2.0dip"
+						android:layout_width="18.0dip"
+						android:layout_height="18.0dip" 
+						android:src="@drawable/ic_sinyal" 
+						android:tint="#ff00edff" />
+					
+                    <ImageView
+						android:paddingLeft="2.0dip"
+						android:layout_width="18.0dip" 
+						android:layout_height="wrap_content" 
+						android:src="@drawable/ic_sinyal"
+						android:tint="#ff00edff" />
+					
+                    <TextClock
+						android:typeface="monospace" 
+						android:textStyle="italic"
+						android:textColor="#ffa3ff40" 
+						android:layout_gravity="center|right" 
+						android:paddingLeft="2.0dip" 
+						android:layout_width="wrap_content" 
+						android:layout_height="wrap_content" 
+						android:format12Hour="MMMM" 
+						android:format24Hour="MMMM"
+						android:singleLine="true" />
+					
                 </LinearLayout>
+				
             </LinearLayout>
+			
         </LinearLayout>
-        <ImageView android:layout_gravity="center|left" android:layout_width="8.0dip" android:layout_height="8.0dip" android:src="@drawable/bulet_2" />
-        <ImageView android:layout_gravity="center" android:layout_width="20.0dip" android:layout_height="wrap_content" android:layout_marginRight="57.0dip" android:src="@drawable/ic_bird" android:tint="#ffe3b10c" />
-        <ImageView android:layout_gravity="center|right" android:layout_width="8.0dip" android:layout_height="8.0dip" android:src="@drawable/bulet_2" />
-        <ImageView android:layout_gravity="center" android:layout_width="20.0dip" android:layout_height="wrap_content" android:layout_marginLeft="57.0dip" android:src="@drawable/ic_bird_kanan" android:tint="#ffe3b10c" android:rotation="360.0" />
+		
+        <ImageView
+			android:layout_gravity="center|left"
+			android:layout_width="8.0dip" 
+			android:layout_height="8.0dip" 
+			android:src="@drawable/bulet_2" />
+		
+        <ImageView
+			android:layout_gravity="center"
+			android:layout_width="20.0dip" 
+			android:layout_height="wrap_content" 
+			android:layout_marginRight="57.0dip" 
+			android:src="@drawable/ic_bird" 
+			android:tint="#ffe3b10c" />
+		
+        <ImageView 
+			android:layout_gravity="center|right" 
+			android:layout_width="8.0dip" 
+			android:layout_height="8.0dip" 
+			android:src="@drawable/bulet_2" />
+		
+        <ImageView 
+			android:layout_gravity="center" 
+			android:layout_width="20.0dip" 
+			android:layout_height="wrap_content" 
+			android:layout_marginLeft="57.0dip" 
+			android:src="@drawable/ic_bird_kanan" 
+			android:tint="#ffe3b10c"
+			android:rotation="360.0" />
+		
     </FrameLayout>
+	
 </LinearLayout>
