--- a/UpdateFlymeStyle/app/src/main/res/layout/cara_install.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/cara_install.xml
@@ -17,5 +17,16 @@
 		android:textStyle="bold"
 		android:typeface="serif"/>
 
+	<TextView
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:text="@string/cara_install_flyme_ui"
+		android:gravity="center_horizontal"
+		android:layout_marginTop="16dp"
+		android:textSize="16sp"
+		android:textColor="#FFFFFF"
+		android:textStyle="bold"
+		android:typeface="serif"/>
+
 </LinearLayout>
 
