--- a/UpdateFlymeStyle/app/src/main/res/layout/flyme_02.xml
+++ b/UpdateFlymeStyle/app/src/main/res/layout/flyme_02.xml
@@ -1,6 +1,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
-    
+    <FrameLayout android:layout_width="fill_parent" android:layout_height="36.0dip">
+        <ImageView android:layout_gravity="center_vertical" android:background="#ffe20d00" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
+        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
+            <LinearLayout android:gravity="center|left" android:orientation="vertical" android:layout_width="25.0dip" android:layout_height="fill_parent">
+                <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_leaf" android:tint="#ffe20d00" android:rotation="90.0" />
+            </LinearLayout>
+            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
+                <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:paddingLeft="2.0dip" android:paddingRight="50.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
+                    <TextView android:textSize="12.0sp" android:typeface="serif" android:textColor="#ff0db7b9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Dev" />
+                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_sinyal" android:tint="#ffff7b00" />
+                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_sinyal" android:tint="#ffff7b00" />
+                </LinearLayout>
+                <LinearLayout android:orientation="horizontal" android:paddingLeft="2.0dip" android:paddingRight="50.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
+                    <TextView android:textSize="14.0sp" android:typeface="serif" android:textColor="#ff329900" android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="12.06 WIB" android:singleLine="true" />
+                    <ImageView android:paddingLeft="2.0dip" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_dnd" android:tint="#ffe20d00" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
+                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
+                    <TextView android:textSize="12.0sp" android:typeface="monospace" android:textStyle="italic" android:textColor="#ff2cb3b5" android:layout_gravity="center|right" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="45*C" android:singleLine="true" />
+                    <TextView android:textSize="12.0sp" android:typeface="monospace" android:textStyle="italic" android:textColor="#ff009bff" android:layout_gravity="center|right" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="67%" android:singleLine="true" />
+                    <ImageView android:layout_gravity="center|right" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_battery" android:tint="#ff00ff5d" />
+                </LinearLayout>
+                <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
+                    <TextView android:textSize="10.0sp" android:typeface="serif" android:textColor="#ff925ff4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1 message unread" android:singleLine="true" />
+                    <ImageView android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/ic_notification" android:tint="#ffffdd00" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout android:gravity="center|right" android:orientation="vertical" android:layout_width="25.0dip" android:layout_height="fill_parent">
+                <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_leaf" android:tint="#ffe20d00" android:rotation="-90.0" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/shape3" android:layout_width="100.0dip" android:layout_height="22.0dip">
+            <TextClock android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:format12Hour="EEEE" android:format24Hour="EEEE" />
+        </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
